--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Core requirements
-streamlit==1.34.0
-pandas==2.2.0
-numpy==1.26.3
-scikit-learn==1.4.0
-xgboost==2.0.3
-joblib==1.3.2
-matplotlib==3.8.2
-seaborn==0.13.1
-plotly==5.18.0
-jsonschema==4.20.0
+#streamlit==1.34.0
+#pandas==2.2.0
+#numpy==1.26.3
+#scikit-learn==1.4.0
+#xgboost==2.0.3
+#joblib==1.3.2
+#matplotlib==3.8.2
+#seaborn==0.13.1
+#plotly==5.18.0
+#jsonschema==4.20.0
